--- a/src/app/pages/login-admin/login-admin.component.html
+++ b/src/app/pages/login-admin/login-admin.component.html
@@ -1,12 +1,12 @@
 <div class="card text-center" style="width: 18rem; margin: 50px;">
   <div class="card-body">
-    <h2 class="card-title">Login Paciente</h2>
+    <div class="btn-group" role="group" aria-label="Basic example">
+      <a routerLink="/admin"><button type="button" class="btn btn-primary">Administrador</button></a>
+      <a routerLink="/funcionario"><button type="button" class="btn btn-primary">Funcionário</button></a>
+    </div>
+    <h2 class="card-title">Login Adminstrador</h2>
     <div class="card-text">
       <form>
-        <div class="form-group">
-          <label for="exampleInputEmail" style="float: left;">Nome</label>
-          <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp">
-        </div>
         <div class="form-group">
           <label for="exampleInputEmail1" style="float: left;">ID</label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -15,7 +15,7 @@
           <label for="exampleInputPassword1" style="float: left;">Senha</label>
           <input type="password" class="form-control" id="exampleInputPassword1">
         </div>
-        <button routerLink="" type="submit" class="btn btn-primary entrar" style="width: 100%; margin-left: 0px;">Entrar</button>
+        <button type="submit" class="btn btn-primary entrar" style="width: 100%; margin-left: 0px;">Entrar</button>
       </form>
     </div>
   </div>
