tela cadastro paciente

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,4 +2,9 @@
   <a class="navbar-brand">
       <img class="logo" src="assets/images/logo01.png" alt="" loading="lazy">
   </a>
+
+  <img src="../../../assets/images/avatar.png" alt="" class="rounded-circle" width="80" height="80" >
+  <div class="badge badge-light" >nome</div>
+  <div class="badge badge-light">coren</div>
+
 </nav>
