--- a/src/app/pages/caderneta-vacinacao/caderneta-vacinacao.component.css
+++ b/src/app/pages/caderneta-vacinacao/caderneta-vacinacao.component.css
@@ -5,3 +5,10 @@
     margin-top: 30px;
     margin-bottom: 30px;
 }
+.container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    background-color: white;
+    margin-top: 30px;
+}
