ajustes de layout

--- a/src/app/pages/cadastrar-campanha/cadastrar-campanha.component.html
+++ b/src/app/pages/cadastrar-campanha/cadastrar-campanha.component.html
@@ -1,12 +1,12 @@
-<form style="background-color: rgba(183,225,228,0.4); padding: 30px; margin-top: 50px;">
+<form class="container-sm p-4 mt-5 bg-white">
 
     <h2>Campanha de Vacinação</h2>
-  
+
     <div class="form-group">
       <label for="idVacina" style="float: left;">Vacina:</label>
       <input type="text" class="form-control" id="idVacina">
     </div>
-  
+
     <div class="form-row">
       <div class="form-group  col-md-6">
         <label for="idDataInicio" style="float: left;">Data de Início:</label>
@@ -18,7 +18,7 @@
       </div>
 
     </div>
-  
+
     <div class="form-group">
         <label for="idCidade" style="float: left;">Cidade:</label>
         <input type="text" class="form-control" id="idCidade">
@@ -28,7 +28,7 @@
         <label for="idEstado" style="float: left;">Estado:</label>
         <input type="text" class="form-control" id="idEstado">
     </div>
-  
+
     <div class="form-row">
       <div class="form-group col-md-6">
         <button type="reset" class="btn btn-secondary entrar col-12">Limpar</button>
@@ -38,4 +38,4 @@
       </div>
     </div>
 </form>
-  
+
