--- a/src/app/pages/cadastrar-paciente/cadastrar-paciente.component.html
+++ b/src/app/pages/cadastrar-paciente/cadastrar-paciente.component.html
@@ -1,4 +1,4 @@
-<form style="background-color: rgba(183,225,228,0.4); padding: 30px; margin-top: 50px;">
+<form class="container-sm p-4 mt-5 bg-white">
 
   <h2>Cadastrar Paciente</h2>
 
