--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,23 @@
-<nav class="header navbar navbar-light bg-light">
-  <a class="navbar-brand">
-      <img class="logo" src="assets/images/logo01.png" alt="" loading="lazy">
+<nav class="header navbar navbar-expand flex-column flex-md-row bd-navbar">
+
+  <a class="navbar-brand" href="/">
+    <img class="logo" src="assets/images/logo01.png" alt="" loading="lazy">
   </a>
 
-  <img src="../../../assets/images/avatar.png" alt="" class="rounded-circle" width="80" height="80" >
-  <div class="badge badge-light" >nome</div>
-  <div class="badge badge-light">coren</div>
+  <ul class="navbar-nav ml-sm-auto form-inline">
+    <li class="nav-item p-4">
+      <img src="../../../assets/images/avatar.png" alt="" class="rounded-circle" width="40" height="40">
+    </li>
+    <li class="nav-item p-4">Nome</li>
+    <Li class="nav-item p-4">
+      <a href="/editar/perfil">
+        <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-gear-fill" fill="currentColor"
+          xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd"
+            d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 0 0-5.86 2.929 2.929 0 0 0 0 5.858z" />
+        </svg>
+      </a>
+    </Li>
+  </ul>
 
 </nav>
