--- a/src/app/pages/caderneta-vacinacao/caderneta-vacinacao.component.html
+++ b/src/app/pages/caderneta-vacinacao/caderneta-vacinacao.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-sm p-4 mt-5 bg-white">
   <h2 style="text-align: center; margin-top: 20px;">Caderneta de Vacinação</h2>
   <div class="notificações">
       Notificações de campanha
