--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
-body {
-  background-color: gainsboro;
+:root{
+  --cor-padrao-fundo: #e8e3e3;
 }
+
+body {
+  background-color: var(--cor-padrao-fundo);
+}
+
 .container {
   padding-left: 100px;
   padding-right: 100px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
