--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="header navbar navbar-expand flex-column flex-md-row bd-navbar">
+<!-- <nav class="header navbar navbar-expand flex-column flex-md-row bd-navbar">
 
   <a class="navbar-brand" href="/">
     <img class="logo" src="assets/images/logo01.png" alt="" loading="lazy">
@@ -20,4 +20,20 @@
     </Li>
   </ul>
 
+</nav> -->
+
+<nav class="navbar navbar-dark sticky-top bg-success flex-md-nowrap p-0 shadow">
+  <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#">IMUNO</a>
+  <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <ul class="nav justify-content-end ">
+    <li class="nav-item text-nowrap">
+      <a class="nav-link text-white" routerLink="/dashboard-funcionario" routerLinkActive="selected" href="#">Home</a>
+    </li>
+    <li class="nav-item text-nowrap">
+      <a class="nav-link text-white" href="#">Sign out</a>
+    </li>
+  </ul>
 </nav>
