--- a/src/app/pages/dashboard-funcionario/dashboard-funcionario.component.html
+++ b/src/app/pages/dashboard-funcionario/dashboard-funcionario.component.html
@@ -1,55 +1,61 @@
-<form class="container-sm p-4 mt-5  bg-white">
-    <!-- <div class="row row-cols-1 row-cols-md-3 mt-4">
-        <div class="col mb-4">
-            <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title" style="text-align: center;">Funcionários</h5>
-                </div>
-            </div>
-        </div>
-        <div class="col mb-4">
-            <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title" style="text-align: center;">Pacientes</h5>
-                </div>
-            </div>
-        </div>
-        <div class="col mb-4">
-            <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
-                <div class="card-body">
-                   <h5 class="card-title" style="text-align: center;">Vacinas</h5>
-                </div>
-            </div>
-        </div>
-        <div class="col mb-4">
-            <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
-                <div class="card-body">
-                  <h5 class="card-title" style="text-align: center;">Camapanhas de Vacinação</h5>
-                  
-                </div>
-            </div>
-        </div>
-        <div class="col mb-4">
-            <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
-                <div class="card-body">
-                  <h5 class="card-title" style="text-align: center;">Vacinar</h5>
-                  
-                </div>
-            </div>
-        </div>
-        <div class="col mb-4">
-            <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
-                <div class="card-body">
-                  <h5 class="card-title" style="text-align: center;">Notícias</h5>
-                </div>
-            </div>
-        </div>
-    </div> -->
+<!-- <form class="container-sm p-4 mt-5  bg-white">
     <div class="form-row">
-        <button type="button" class="btn btn-success btn-lg btn-block mb-2">Cadastrar Paciente</button>
-        <button type="button" class="btn btn-success btn-lg btn-block mb-2">Vacinar</button>
-        <button type="button" class="btn btn-success btn-lg btn-block mb-2">Cadastrar Lote de Vacina</button>
+        <button type="button" class="btn btn-success btn-lg btn-block">Cadastrar Paciente</button>
+        <button type="button" routerLink="/vacinar" routerLinkActive="selected" class="btn btn-success btn-lg btn-block">Vacinar</button>
+        <button type="button" class="btn btn-success btn-lg btn-block">Cadastrar Lote de Vacina</button>
         <button type="button" class="btn btn-success btn-lg btn-block">Campanha de Vacinação</button>
     </div>    
-</form>
+</form> -->
 
+<div class="container-fluid">
+    <div class="row">
+      <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+        <div class="sidebar-sticky pt-3">
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/cadastro/paciente" routerLinkActive="selected" href="#">
+                <span ></span>Cadastrar Paciente<span></span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/cadastro/funcionario" routerLinkActive="selected" href="#">
+                <span ></span>Cadastrar Funcionário</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/cadastro/paciente" routerLinkActive="selected" href="#">
+                <span ></span>Cadastrar Vacina</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/cadastro-lote-vacina" routerLinkActive="selected" href="#">
+                <span ></span>Cadastrar Lote de Vacina</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/cadastro/campanha" routerLinkActive="selected" href="#">
+                <span ></span>Campanha de Vacinação</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/vacinar" routerLinkActive="selected" href="#">
+                  <span ></span>Vacinar</a>
+              </li>
+            <li class="nav-item">
+              <a class="nav-link hoverable" routerLink="" routerLinkActive="selected" href="#">
+                <span ></span>Notícias</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+  
+  
+  
+        <!-- <canvas class="my-4 w-100" id="myChart" width="900" height="380">
+          <a class="navbar-brand" href="/">
+              <img class="logo" src="assets/images/logo01.png" alt="" loading="lazy">
+          </a>
+        </canvas> -->
+  
+       
+        
+  
+    </div>
+  </div>
+  
