ajuste nas rotas

--- a/src/app/pages/campanha-vacinacao/campanha-vacinacao.component.html
+++ b/src/app/pages/campanha-vacinacao/campanha-vacinacao.component.html
@@ -2,7 +2,7 @@
     <h2>Campanhas de Vacinação</h2>
 
     <div class="col-md-4 my-3 px-0">
-        <button type="button" class="btn btn-success entrar col-12">Cadastrar Campanha</button>
+        <button type="button" class="btn btn-success entrar col-12" routerLink="/cadastro/campanha">Cadastrar Campanha</button>
     </div>
 
     <div class="form-row align-items-center">
