--- a/src/app/pages/dashboard-funcionario/dashboard-funcionario.component.html
+++ b/src/app/pages/dashboard-funcionario/dashboard-funcionario.component.html
@@ -1,13 +1,13 @@
-<!-- <form class="container-sm p-4 mt-5  bg-white">
+<form class="container-sm p-4 mt-5  bg-white">
     <div class="form-row">
-        <button type="button" class="btn btn-success btn-lg btn-block">Cadastrar Paciente</button>
+        <button type="button" routerLink="/cadastro/paciente" class="btn btn-success btn-lg btn-block">Cadastrar Paciente</button>
         <button type="button" routerLink="/vacinar" routerLinkActive="selected" class="btn btn-success btn-lg btn-block">Vacinar</button>
-        <button type="button" class="btn btn-success btn-lg btn-block">Cadastrar Lote de Vacina</button>
-        <button type="button" class="btn btn-success btn-lg btn-block">Campanha de Vacinação</button>
+        <button type="button" routerLink="/cadastro-lote-vacina" class="btn btn-success btn-lg btn-block">Cadastrar Lote de Vacina</button>
+        <button type="button" routerLink="/campanha-vacinacao" class="btn btn-success btn-lg btn-block">Campanhas de Vacinação</button>
     </div>    
-</form> -->
+</form>
 
-<div class="container-fluid">
+<!-- <div class="container-fluid">
     <div class="row">
       <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
         <div class="sidebar-sticky pt-3">
@@ -47,15 +47,15 @@
   
   
   
-        <!-- <canvas class="my-4 w-100" id="myChart" width="900" height="380">
+          <canvas class="my-4 w-100" id="myChart" width="900" height="380">
           <a class="navbar-brand" href="/">
               <img class="logo" src="assets/images/logo01.png" alt="" loading="lazy">
           </a>
-        </canvas> -->
+        </canvas>
   
        
         
   
     </div>
-  </div>
+  </div> -->
   
