--- a/src/app/pages/login-admin/login-admin.component.html
+++ b/src/app/pages/login-admin/login-admin.component.html
@@ -1,7 +1,7 @@
 <div class="card text-center" style="width: 18rem; margin: 50px;">
   <div class="card-body">
     <div class="btn-group" role="group" aria-label="Basic example">
-      <a routerLink="/admin"><button type="button" class="btn btn-primary">Administrador</button></a>
+      <a routerLink="/admin"><button type="button" class="btn btn-primary" style="margin-right: 5px;">Administrador</button></a>
       <a routerLink="/funcionario"><button type="button" class="btn btn-primary">Funcionário</button></a>
     </div>
     <h2 class="card-title">Login Adminstrador</h2>
