--- a/src/app/pages/login-funcionario/login-funcionario.component.html
+++ b/src/app/pages/login-funcionario/login-funcionario.component.html
@@ -1,7 +1,7 @@
 <div class="card text-center" style="width: 18rem; margin: 50px;">
   <div class="card-body">
     <div class="btn-group" role="group" aria-label="Basic example">
-      <a routerLink="/admin"><button type="button" class="btn btn-primary">Administrador</button></a>
+      <a routerLink="/admin"><button type="button" class="btn btn-primary" style="margin-right: 5px;">Administrador</button></a>
       <a routerLink="/funcionario"><button type="button" class="btn btn-primary">Funcionário</button></a>
     </div>
     <h2 class="card-title">Login Funcionário</h2>
@@ -16,8 +16,7 @@
           <input type="password" class="form-control" id="exampleInputPassword1">
         </div>
         <button type="submit" class="btn btn-primary entrar" style="width: 100%; margin-left: 0px;">Entrar</button>
-        <button type="submit" class="btn btn-primary cadastro"
-          style="width: 100%; margin-left: 0px; margin-top: 10px;">Fazer Cadastro</button>
+        <a routerLink="/cadastro/funcionario"><button type="button" class="btn btn-primary cadastro" style="width: 100%; margin-left: 0px; margin-top: 10px;">Fazer Cadastro</button></a>
       </form>
     </div>
   </div>
