--- a/src/app/pages/login-funcionario/login-funcionario.component.html
+++ b/src/app/pages/login-funcionario/login-funcionario.component.html
@@ -15,7 +15,7 @@
           <label for="exampleInputPassword1" style="float: left;">Senha</label>
           <input type="password" class="form-control" id="exampleInputPassword1">
         </div>
-        <button type="submit" class="btn btn-primary entrar" style="width: 100%; margin-left: 0px;">Entrar</button>
+        <a routerLink="/dashboard-funcionario"><button type="submit" class="btn btn-primary entrar" style="width: 100%; margin-left: 0px;">Entrar</button></a>
         <a routerLink="/cadastro/funcionario"><button type="button" class="btn btn-primary cadastro" style="width: 100%; margin-left: 0px; margin-top: 10px;">Fazer Cadastro</button></a>
       </form>
     </div>
