--- a/src/app/pages/login-paciente/login-paciente.component.html
+++ b/src/app/pages/login-paciente/login-paciente.component.html
@@ -15,7 +15,7 @@
           <label for="exampleInputPassword1" style="float: left;">Senha</label>
           <input type="password" class="form-control" id="exampleInputPassword1">
         </div>
-        <button routerLink="" type="submit" class="btn btn-primary entrar" style="width: 100%; margin-left: 0px;">Entrar</button>
+        <button routerLink="/dashboard-paciente" type="submit" class="btn btn-primary entrar" style="width: 100%; margin-left: 0px;">Entrar</button>
       </form>
     </div>
   </div>
