--- a/src/app/pages/login-admin/login-admin.component.html
+++ b/src/app/pages/login-admin/login-admin.component.html
@@ -15,7 +15,7 @@
           <label for="exampleInputPassword1" style="float: left;">Senha</label>
           <input type="password" class="form-control" id="exampleInputPassword1">
         </div>
-        <button type="submit" class="btn btn-primary entrar" style="width: 100%; margin-left: 0px;">Entrar</button>
+        <a routerLink="/dashboard-admin"><button type="submit" class="btn btn-primary entrar" style="width: 100%; margin-left: 0px;">Entrar</button></a>
       </form>
     </div>
   </div>
