--- a/src/app/pages/cadastrar-paciente/cadastrar-paciente.component.html
+++ b/src/app/pages/cadastrar-paciente/cadastrar-paciente.component.html
@@ -14,19 +14,17 @@
     </div>
     <div class="form-group  col-md-6">
       <label for="genero" style="float: left;">Gênero:</label>
-      <input type="text" class="form-control" id="genero" formControlName="genero">
-      <!-- <select class="custom-select mr-sm-2" id="idGenero">
-        <option selected>Choose...</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
-      </select> -->
+      <select class="custom-select mr-sm-2" id="genero" formControlName="genero">
+        <option selected value="Masculino">Masculino</option>
+        <option value="Feminino">Feminino</option>
+        <option value="Outros">Outros</option>
+      </select>
     </div>
   </div>
 
   <div class="form-row">
     <div class="form-group col-md-6">
-      <label for="cpfRne" style="float: left;">CPF:</label>
+      <label for="cpfRne" style="float: left;">CPF ou RNE:</label>
       <input type="text" class="form-control" id="cpfRne" formControlName="cpfRne">
     </div>
     <div class="form-group col-md-6">
@@ -88,12 +86,12 @@
     </div>
     <div class="form-group col-md-4">
       <label for="telefone">Telefone:</label>
-      <input type="tel" class="form-control" id="telefone" placeholder="(73) 95321-9875"
+      <input type="tel" class="form-control" id="telefone" placeholder="(XX) XXXXX-XXXX"
         mask="(99) 99999-9999" formControlName="telefone">
     </div>
     <div class="form-group col-md-4">
       <label for="telefoneEmergencia">Telefone de Ermegencia:</label>
-      <input type="tel" class="form-control" id="telefoneEmergencia" placeholder="(73) 95321-9875"
+      <input type="tel" class="form-control" id="telefoneEmergencia" placeholder="(XX) XXXXX-XXXX"
         mask="(99) 99999-9999" formControlName="telefoneEmergencia">
     </div>
   </div>
@@ -115,7 +113,7 @@
     </div>
     <div class="form-group col-md-6">
       <button type="submit" class="btn"
-        [class]="operacao ? 'btn-primary' : 'btn-success'">{{ operacao ? "Cadastrar" : "Atualizar" }}
+        [class]="operacao ? 'btn-primary col-12' : 'btn-success col-12'">{{ operacao ? "Cadastrar" : "Atualizar" }}
       </button>
     </div>
   </div>
