--- a/src/app/pages/login-paciente/login-paciente.component.html
+++ b/src/app/pages/login-paciente/login-paciente.component.html
@@ -4,15 +4,11 @@
     <div class="card-text">
       <form>
         <div class="form-group">
-          <label for="exampleInputEmail" style="float: left;">Nome</label>
+          <label for="exampleInputEmail" style="float: left;">E-mail: </label>
           <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp">
         </div>
         <div class="form-group">
-          <label for="exampleInputEmail1" style="float: left;">ID</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1" style="float: left;">Senha</label>
+          <label for="exampleInputPassword1" style="float: left;">Senha: </label>
           <input type="password" class="form-control" id="exampleInputPassword1">
         </div>
         <button routerLink="/dashboard-paciente" type="submit" class="btn btn-primary entrar" style="width: 100%; margin-left: 0px;">Entrar</button>
