--- a/src/app/pages/login-paciente/login-paciente.component.css
+++ b/src/app/pages/login-paciente/login-paciente.component.css
@@ -2,13 +2,6 @@ h1 {
   text-align: center;
 }
 
-.btn-primary {
-  background-color:  rgba(169,232,167,1) !important;
-  border-color: rgba(169,232,167,1) !important;
-  color: black !important;
-  margin-right:30px;
-  margin-left:30px;
-}
 .btn-group {
   display: flex;
   justify-content: center !important;
@@ -18,3 +11,16 @@ h1 {
   background-color: var(--blue) !important;
   color: white !important;
 }
+.card-title{
+  text-align: center;
+  padding: 5% 5% 10%;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #28a745 !important ;  
+  border-color: #28a745;
+  margin-top: 5%;
+}
+
+
