--- a/src/app/pages/funcionario/cadastrar-funcionario/cadastrar-funcionario.component.html
+++ b/src/app/pages/funcionario/cadastrar-funcionario/cadastrar-funcionario.component.html
@@ -42,7 +42,7 @@
     </div>
     <div class="form-group col-md-4">
       <label for="complemento">Complemento:</label>
-      <input type="number" class="form-control" id="complemento" formControlName="complemento" [class]="(submitted && formulario.get('complemento').errors) ||
+      <input type="text" class="form-control" id="complemento" formControlName="complemento" [class]="(submitted && formulario.get('complemento').errors) ||
             (formulario.get('complemento').errors && formulario.get('complemento').dirty) ? 'is-invalid' :
             formulario.get('complemento').dirty ? 'is-valid' : ''">
       <div *ngIf="formulario.get('complemento').errors?.required" class="invalid-feedback">Complemento é obrigatório
@@ -88,6 +88,7 @@
             (formulario.get('email').errors && formulario.get('email').dirty) ? 'is-invalid' :
             formulario.get('email').dirty ? 'is-valid' : ''">
       <div *ngIf="formulario.get('email').errors?.email" class="invalid-feedback">Digite um e-mail válido</div>
+      <div *ngIf="formulario.get('email').errors?.required" class="invalid-feedback">E-mail é obrigatório</div>
     </div>
     <div class="form-group col-md-4">
       <label for="telefone">Telefone:</label>
@@ -102,7 +103,8 @@
         mask="(99)99999-9999" [class]="(submitted && formulario.get('telefoneEmergencia').errors) ||
             (formulario.get('telefoneEmergencia').errors && formulario.get('telefoneEmergencia').dirty) ? 'is-invalid' :
             formulario.get('telefoneEmergencia').dirty ? 'is-valid' : ''">
-      <div *ngIf="formulario.get('telefoneEmergencia').errors?.required" class="invalid-feedback">Telefone Emergencia é
+      <div *ngIf="formulario.get('telefoneEmergencia').errors?.required" class="invalid-feedback">Telefone de Emergencia
+        é
         obrigatório</div>
     </div>
   </div>
@@ -132,9 +134,7 @@
       <button type="reset" class="btn btn-secondary entrar col-12">Limpar</button>
     </div>
     <div class="form-group col-md-6">
-      <button type="submit" class="btn btn-success entrar col-12"
-        [class]="operacao ? 'btn-primary' : 'btn-success'">{{operacao ? "Cadastrar" : "Atualizar" }}
-      </button>
+      <button type="submit" class="btn btn-success entrar col-12">Cadastrar</button>
     </div>
   </div>
 
