--- a/src/app/pages/paciente/editar-perfil-paciente/editar-perfil-paciente.component.html
+++ b/src/app/pages/paciente/editar-perfil-paciente/editar-perfil-paciente.component.html
@@ -1,6 +1,7 @@
 <form class="container-sm p-4 mt-5 bg-white" [formGroup]="formulario" (ngSubmit)="atualizar()">
-
-  <h2>Cadastrar Paciente</h2>
+  <input type="hidden" id="id" formControlName="id"/>
+  <input type="hidden" id="usuarioId" formControlName="usuarioId"/>
+  <h2>Editar Perfil</h2>
 
   <div class="form-group">
     <label for="nome" style="float: left;">Nome Completo:</label>
@@ -13,7 +14,7 @@
   <div class="form-row">
     <div class="form-group  col-md-6">
       <label for="dataNascimento" style="float: left;">Data de Nascimento:</label>
-      <input type="test" class="form-control" id="dataNascimento" formControlName="dataNascimento" [class]="(submitted && formulario.get('dataNascimento').errors) ||
+      <input type="date" class="form-control" id="dataNascimento" formControlName="dataNascimento" [class]="(submitted && formulario.get('dataNascimento').errors) ||
             (formulario.get('dataNascimento').errors && formulario.get('dataNascimento').dirty) ? 'is-invalid' :
             formulario.get('dataNascimento').dirty ? 'is-valid' : ''">
       <div *ngIf="formulario.get('dataNascimento').errors?.required" class="invalid-feedback">Data de Nascimento é
@@ -22,9 +23,9 @@
     <div class="form-group  col-md-6">
       <label for="genero" style="float: left;">Gênero:</label>
       <select class="custom-select mr-sm-2" id="genero" formControlName="genero">
-        <option selected value="Masculino">Masculino</option>
-        <option value="Feminino">Feminino</option>
-        <option value="Outros">Outros</option>
+        <option selected value="1">Masculino</option>
+        <option value="2">Feminino</option>
+        <option value="3">Outros</option>
       </select>
     </div>
   </div>
@@ -51,14 +52,11 @@
     <input type="text" class="form-control" id="nomeMae" formControlName="nomeMae" [class]="(submitted && formulario.get('nomeMae').errors) ||
           (formulario.get('nomeMae').errors && formulario.get('nomeMae').dirty) ? 'is-invalid' :
           formulario.get('nomeMae').dirty ? 'is-valid' : ''">
-    <div *ngIf="formulario.get('nomeMae').errors?.required" class="invalid-feedback">Nome Mãe é obrigatório</div>
+    <div *ngIf="formulario.get('nomeMae').errors?.required" class="invalid-feedback">Nome da Mãe é obrigatório</div>
   </div>
   <div class="form-group">
     <label for="nomePai" style="float: left;">Nome do Pai:</label>
-    <input type="text" class="form-control" id="nomePai" formControlName="nomePai" [class]="(submitted && formulario.get('nomePai').errors) ||
-          (formulario.get('nomePai').errors && formulario.get('nomePai').dirty) ? 'is-invalid' :
-          formulario.get('nomePai').dirty ? 'is-valid' : ''">
-    <div *ngIf="formulario.get('nomePai').errors?.required" class="invalid-feedback">Nome Mãe é obrigatório</div>
+    <input type="text" class="form-control" id="nomePai" formControlName="nomePai">
   </div>
 
   <div class="form-group">
@@ -78,7 +76,7 @@
     </div>
     <div class="form-group col-md-4">
       <label for="complemento">Complemento:</label>
-      <input type="number" class="form-control" id="complemento" formControlName="complemento" [class]="(submitted && formulario.get('complemento').errors) ||
+      <input type="text" class="form-control" id="complemento" formControlName="complemento" [class]="(submitted && formulario.get('complemento').errors) ||
             (formulario.get('complemento').errors && formulario.get('complemento').dirty) ? 'is-invalid' :
             formulario.get('complemento').dirty ? 'is-valid' : ''">
       <div *ngIf="formulario.get('complemento').errors?.required" class="invalid-feedback">Complemento é obrigatório
@@ -123,6 +121,7 @@
             (formulario.get('email').errors && formulario.get('email').dirty) ? 'is-invalid' :
             formulario.get('email').dirty ? 'is-valid' : ''">
       <div *ngIf="formulario.get('email').errors?.email" class="invalid-feedback">Digite um e-mail válido</div>
+      <div *ngIf="formulario.get('email').errors?.required" class="invalid-feedback">E-mail é obrigatório</div>
     </div>
     <div class="form-group col-md-4">
       <label for="telefone">Telefone:</label>
@@ -132,13 +131,12 @@
       <div *ngIf="formulario.get('telefone').errors?.required" class="invalid-feedback">Telefone é obrigatório</div>
     </div>
     <div class="form-group col-md-4">
-      <label for="telefoneEmergencia">Telefone de Ermegencia:</label>
+      <label for="telefoneEmergencia">Telefone de Emergência:</label>
       <input type="tel" class="form-control" id="telefoneEmergencia" formControlName="telefoneEmergencia"
         mask="(99)99999-9999" [class]="(submitted && formulario.get('telefoneEmergencia').errors) ||
             (formulario.get('telefoneEmergencia').errors && formulario.get('telefoneEmergencia').dirty) ? 'is-invalid' :
             formulario.get('telefoneEmergencia').dirty ? 'is-valid' : ''">
-      <div *ngIf="formulario.get('telefoneEmergencia').errors?.required" class="invalid-feedback">Telefone Emergencia é
-        obrigatório</div>
+      <div *ngIf="formulario.get('telefoneEmergencia').errors?.required" class="invalid-feedback">Telefone de Emergencia é obrigatório</div>
     </div>
   </div>
 
@@ -167,9 +165,7 @@
       <button type="reset" class="btn btn-secondary entrar col-12">Limpar</button>
     </div>
     <div class="form-group col-md-6">
-      <button type="submit" class="btn btn-success entrar col-12"
-        [class]="operacao ? 'btn-primary' : 'btn-success'">{{operacao ? "Cadastrar" : "Atualizar" }}
-      </button>
+      <button (click)="atualizar()" class="btn btn-success entrar col-12">Atualizar</button>
     </div>
   </div>
 
