--- a/src/app/pages/lote/cadastrar-lote/cadastrar-lote.component.html
+++ b/src/app/pages/lote/cadastrar-lote/cadastrar-lote.component.html
@@ -1,13 +1,21 @@
-<!-- <form class="container-sm p-4 mt-5 bg-white" [formGroup]="formulario" (ngSubmit)="cadastrar()">
+<form class="container-sm p-4 mt-5 bg-white" [formGroup]="formulario" (ngSubmit)="cadastrar()">
 
   <h2>Cadastrar Lote</h2>
 
-  <div class="form-group">
+  <div class="form-row">
+    <div class="form-group  col-md-6">
     <label for="codigo" style="float: left;">Código do lote:</label>
     <input type="text" class="form-control" id="codigo" formControlName="codigo" [class]="(submitted && formulario.get('codigo').errors) ||
             (formulario.get('codigo').errors && formulario.get('codigo').dirty) ? 'is-invalid' :
             formulario.get('codigo').dirty ? 'is-valid' : ''" />
     <div *ngIf="formulario.get('codigo').errors?.required" class="invalid-feedback">Código do lote é obrigatório</div>
+    </div>
+    <div class="form-group  col-md-6">
+      <label for="dataEntrada" style="float: left;">Vacinas:</label>
+      <select class="form-control" name="vacina" id="vacina">
+        <option *ngFor="let vacina of vacinas" [value]="vacina.id">{{vacina.nome}}</option>
+      </select>
+    </div>
   </div>
 
   <div class="form-row">
@@ -16,11 +24,12 @@
       <input type="date" class="form-control" id="dataFabricacao" formControlName="dataFabricacao" [class]="(submitted && formulario.get('dataFabricacao').errors) ||
             (formulario.get('dataFabricacao').errors && formulario.get('dataFabricacao').dirty) ? 'is-invalid' :
             formulario.get('dataFabricacao').dirty ? 'is-valid' : ''">
-      <div *ngIf="formulario.get('dataFabricacao').errors?.required" class="invalid-feedback">Data de Nascimento é obrigatório</div>
+      <div *ngIf="formulario.get('dataFabricacao').errors?.required" class="invalid-feedback">Data de Nascimento é
+        obrigatório</div>
     </div>
     <div class="form-group  col-md-6">
       <label for="quantidade" style="float: left;">Quantidade:</label>
-      <input type="number" class="form-control" id="quantidade" formControlName="quantidade" [class]="(submitted && formulario.get('quantidade').errors) ||
+      <input type="number" class="form-control" min="1" id="quantidade" formControlName="quantidade" [class]="(submitted && formulario.get('quantidade').errors) ||
             (formulario.get('quantidade').errors && formulario.get('quantidade').dirty) ? 'is-invalid' :
             formulario.get('quantidade').dirty ? 'is-valid' : ''">
       <div *ngIf="formulario.get('quantidade').errors?.required" class="invalid-feedback">Quantidade é obrigatório</div>
@@ -29,22 +38,22 @@
 
   <div class="form-row">
     <div class="form-group  col-md-6">
-      <label for="dataValidade" style="float: left;">Data de Validade:</label>
-      <input type="date" class="form-control" id="dataValidade" formControlName="dataValidade" [class]="(submitted && formulario.get('dataValidade').errors) ||
-            (formulario.get('dataValidade').errors && formulario.get('dataValidade').dirty) ? 'is-invalid' :
-            formulario.get('dataValidade').dirty ? 'is-valid' : ''">
-      <div *ngIf="formulario.get('dataValidade').errors?.required" class="invalid-feedback">Data de Validade é obrigatório</div>
-    </div>
-    <div class="form-group  col-md-6">
       <label for="dataEntrada" style="float: left;">Data de Entrada:</label>
       <input type="date" class="form-control" id="dataEntrada" formControlName="dataEntrada" [class]="(submitted && formulario.get('dataEntrada').errors) ||
-            (formulario.get('dataEntrada').errors && formulario.get('dataEntrada').dirty) ? 'is-invalid' :
-            formulario.get('dataEntrada').dirty ? 'is-valid' : ''">
-      <div *ngIf="formulario.get('dataEntrada').errors?.required" class="invalid-feedback">Data de Entrada é obrigatório</div>
+      (formulario.get('dataEntrada').errors && formulario.get('dataEntrada').dirty) ? 'is-invalid' :
+      formulario.get('dataEntrada').dirty ? 'is-valid' : ''">
+      <div *ngIf="formulario.get('dataEntrada').errors?.required" class="invalid-feedback">Data de Entrada é obrigatório
+      </div>
+    </div>
+    <div class="form-group  col-md-6">
+      <label for="dataValidade" style="float: left;">Data de Validade:</label>
+      <input type="date" class="form-control" id="dataValidade" formControlName="dataValidade" [class]="(submitted && formulario.get('dataValidade').errors) ||
+      (formulario.get('dataValidade').errors && formulario.get('dataValidade').dirty) ? 'is-invalid' :
+      formulario.get('dataValidade').dirty ? 'is-valid' : ''">
+      <div *ngIf="formulario.get('dataValidade').errors?.required" class="invalid-feedback">Data de Validade é
+        obrigatório</div>
     </div>
   </div>
-
-
 
   <div class="form-row">
     <div class="form-group col-md-6">
@@ -55,4 +64,4 @@
     </div>
   </div>
 
-</form> -->
+</form>
