--- a/src/app/pages/paciente/editar-perfil-paciente/editar-perfil-paciente.component.html
+++ b/src/app/pages/paciente/editar-perfil-paciente/editar-perfil-paciente.component.html
@@ -2,7 +2,7 @@
   <input type="hidden" id="id" formControlName="id"/>
   <input type="hidden" id="usuarioId" formControlName="usuarioId"/>
 
-  <h2>Editar Perfil</h2>
+  <h2>Editar</h2>
 
   <div class="form-group">
     <label for="nome" style="float: left;">Nome Completo:</label>
@@ -70,7 +70,7 @@
   <div class="form-row">
     <div class="form-group col-md-2">
       <label for="numero">Número:</label>
-      <input type="number" class="form-control" id="numero" formControlName="numero" [class]="(submitted && formulario.get('numero').errors) ||
+      <input type="number" class="form-control" min="0" id="numero" formControlName="numero" [class]="(submitted && formulario.get('numero').errors) ||
             (formulario.get('numero').errors && formulario.get('numero').dirty) ? 'is-invalid' :
             formulario.get('numero').dirty ? 'is-valid' : ''">
       <div *ngIf="formulario.get('numero').errors?.required" class="invalid-feedback">Número é obrigatório</div>
@@ -166,7 +166,7 @@
       <button type="reset" class="btn btn-secondary entrar col-12">Limpar</button>
     </div>
     <div class="form-group col-md-6">
-      <button (click)="atualizar()" class="btn btn-success entrar col-12">Atualizar</button>
+      <button type="submit" class="btn btn-success entrar col-12">Atualizar</button>
     </div>
   </div>
 
